fix(ffe-buttons): tekst-overflow i inline knapper

--- a/packages/ffe-buttons/less/inline-base-button.less
+++ b/packages/ffe-buttons/less/inline-base-button.less
@@ -26,6 +26,7 @@
     text-decoration: none;
     font-size: var(--ffe-fontsize-body-text);
     align-items: center;
+    overflow-wrap: anywhere;
 
     &:active {
         transform: scale(0.97);
